--- a/assets/style.css
+++ b/assets/style.css
@@ -21,11 +21,12 @@ body {
 }
 
 aside {
-    float: right;
+   width: max-content;
 
 }
 
 .about-me {
+    margin: 10px 0px 20px 1px;
     width: auto;
     height: auto;
     display: flex;
@@ -37,7 +38,8 @@ aside {
 }
 
 .about-me img{
-    width: auto;
+    width: 120px;
+    height: 120px;
     border: #13293d dotted 2px;
     
 }
