--- a/assets/style.css
+++ b/assets/style.css
@@ -20,22 +20,21 @@ body {
     background-color: rgb(0, 230, 180);
 }
 
-aside {
-   width: max-content;
-
-}
 
 .about-me {
+    padding: 0 0 0 15;
     margin: 10px 0px 20px 1px;
     width: auto;
     height: auto;
     display: flex;
     flex-direction: column;
-    background-color: aliceblue;
+    background-color: rgb(9, 170, 90);
 }
-.about-me h1 h2 {
+.about-me h1 {
+    font-size: xx-large;
     text-decoration:dashed
 }
+
 
 .about-me img{
     width: 120px;
@@ -44,25 +43,61 @@ aside {
     
 }
 
-.about-me p {
-    color: rgb(18, 202, 91);
+#this {
+    display: flex;
+    position: relative;
+}
+#title{
+    position: absolute;
+    right: 250px;
+    top:450px
+}
+
+
+.wrap{
+    padding: 0 0 0 70;
+    border-left: solid rgb(63, 121, 18) 5px ;
+    float: right;
+    /* display: flex; */
+    flex-direction: column;
 }
 
 .projects {
-    display: flex;
-    width: 500px;
-    height: auto;
+    display: block;
+    width: 850px;
+    height: 200px;
+    margin: 20 0 5 0;
     background-color: chocolate;
+    color: rgba(54, 249, 0, 0.721);
 }
 
-.card  {
+.projects:hover { 
+    transform: scale(1.2); 
+    }
+
+.projects a {
+    width: auto;
+    height: auto;
+}
+
+aside {
+    width: auto;
+    height: auto;
+ display: flex;
+ background-color: #13293d;
+ 
+}
+aside a {
     display: flex;
-    width: 250px;
-    height: 250px;
+    text-align:end;
     text-decoration: none;
-    margin: 3 3 3 3;
-    padding: 2%;
-    background-color: #13293d;
-    
+    color: yellow;
+    padding: 100 100 ;
 }
-
+aside p {
+    display: flex;
+    text-align:end;
+    text-decoration: none;
+    color: yellow;
+    padding: 100 100 ;
+}
